temp flicker fix

--- a/homeManager/config/waybar/style.css
+++ b/homeManager/config/waybar/style.css
@@ -4,7 +4,8 @@
 }
 
 #waybar {
-    background-color: rgba(28, 28, 30, 0.50);
+    background-color: rgba(28, 28, 30, 1);
+    /* background-color: rgba(28, 28, 30, 0.50); causes the flicker :( */
     padding: 4px 10px;
     margin: 5px;
 }
